Path updates and implantation for the rest of the feature